# Data-Challenge

./: .gitignore  DataChallengeExample.ipynb  Makefile  README.md  pyproject.toml  requirements.txt  submit_baseline.py  test_predictions.csv
model-training/: README.md
model-training/configs/: config.yaml  config_b4.yaml  config_b4_finetune.yaml  config_b4_v2.yaml  config_b4_v3.yaml  config_convnext_base.yaml  config_convnext_base_s456.yaml  config_convnext_base_v2.yaml  config_convnext_large.yaml  config_convnext_large_s999.yaml  config_convnextv2_base.yaml
model-training/experiments/: EXPERIMENTS.md
model-training/experiments/configs/: config_b4_base.yaml  config_cnx_synth.yaml  config_cnx_synth_resume.yaml  config_convnext.yaml  config_convnext_base_s789.yaml  config_convnext_large_s456.yaml  config_convnext_tail_ft.yaml  config_convnextv2_large.yaml  config_effnetv2_m.yaml  config_swin_base.yaml  config_vit_base.yaml
model-training/experiments/scripts/: analyze_val.sh  calibrate_job.sh  ensemble_mega.sh  ensemble_s10_max.sh  job_b0_quick.sh  job_b4_3090.sh  job_b4_p100.sh  predict_b4_job.sh  predict_job.sh  (+10 more)
model-training/scripts/: ensemble_new3.sh  predict_b4_job.sh  predict_convnext_base_tta15.sh  predict_ensemble.sh  predict_tta.sh  setup_cluster.sh  train_b4_v2.sh  train_cluster.sh  train_convnext.sh  train_convnext_base.sh  train_convnext_base_v2.sh  train_vit_base.sh
model-training/src/: dataset.py  ensemble.py  ensemble_csv.py  loss.py  model.py  predict.py  train.py
report/: main.typ  refs.bib
train-free/: evaluate_local.py  submit_baseline.py
(+6 files in other folders)
