[project]
name = "data-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "notebook>=7.5.7",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "prettytable>=3.17.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.1",
]
